fix List.of compile issue